Сделал страницу корпоративной культуры

--- a/src/index.html
+++ b/src/index.html
@@ -662,7 +662,7 @@
           </div>
         </div>
         <div class="cards-news" data-swipe>
-          <a href="pages/home/news-details.html" class="wrapper-card-new">
+          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">19 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -679,7 +679,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new">
+          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">16 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -696,7 +696,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new">
+          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">26 августа</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -713,7 +713,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new">
+          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">05 августа</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -730,7 +730,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new">
+          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">26 августа</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -747,7 +747,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new">
+          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">16 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -764,7 +764,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new">
+          <a href="pages/home/news-details.html" class="wrapper-card-newcard-swipe">
             <span class="card-news__date text-description--300">05 августа</span>
             <div class="card-news">
               <div class="card-news__image">
