--- a/src/pages/home/corporate-culture.html
+++ b/src/pages/home/corporate-culture.html
@@ -696,10 +696,125 @@
       </section>
 
       <!-- Блок 5: Советы -->
-      <section></section>
+      <section class="corporate-culture__councils">
+        <div class="corporate-culture__council">
+          <div class="corporate-culture__council-info">
+            <h2 class="text-fiord">Молодежный совет</h2>
+            <p class="text-base--400">
+              Молодёжный совет объединяет активных сотрудников компании, которые вносят свежие идеи и участвуют в развитии корпоративной культуры. Это площадка для общения, самореализации и реализации
+              проектов, направленных на улучшение работы и жизни коллектива.
+            </p>
+          </div>
+          <a href="#" class="btn-blue text-base--400">Подробнее</a>
+        </div>
+        <div class="corporate-culture__council">
+          <div class="corporate-culture__council-info">
+            <h2 class="text-fiord">Рабочий совет</h2>
+            <p class="text-base--400">
+              Рабочий совет — это площадка для диалога между сотрудниками и руководством, где обсуждаются важные вопросы производства и условий труда. Его главная задача — совместный поиск решений,
+              которые помогают улучшать эффективность работы и обеспечивать комфорт на рабочих местах.
+            </p>
+          </div>
+          <a href="#" class="btn-blue text-base--400">Подробнее</a>
+        </div>
+      </section>
 
       <!-- Блок 6: Вакансии -->
-      <section></section>
+      <section class="corporate-culture__vacancies">
+        <div class="corporate-culture__vacancies-title">
+          <h2 class="text-fiord">Вакансии</h2>
+          <div class="corporate-culture__vacancies-title__controls">
+            <button class="corporate-culture__vacancies__controls__arrow" data-swipe-prev>
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="31" viewBox="0 0 14 31" fill="none">
+                <path
+                  d="M3.68001 12.7567C2.27566 14.2463 2.27566 16.7535 3.68014 18.2433L14 29.19L12.2937 31L1.97383 20.0533C1.86995 19.9431 1.75796 19.8243 1.63963 19.6988C-0.546031 17.3803 -0.5468 13.6206 1.63886 11.3022L12.2938 0L14 1.80982L3.68001 12.7567Z"
+                  fill="#FD5D39"
+                />
+              </svg>
+            </button>
+            <button class="corporate-culture__vacancies__controls__arrow" data-swipe-next>
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="31" viewBox="0 0 14 31" fill="none">
+                <path
+                  d="M10.32 12.7567C11.7243 14.2463 11.7243 16.7535 10.3199 18.2433L1.71154e-06 29.19L1.70631 31L12.0262 20.0533C12.13 19.9431 12.242 19.8243 12.3604 19.6988C14.546 17.3803 14.5468 13.6206 12.3611 11.3022L1.70618 0L0 1.80982L10.32 12.7567Z"
+                  fill="#FD5D39"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+        <div class="cards-vacancies" data-swipe>
+          <a href="#" class="card-vacancy card-swipe">
+            <div class="card-vacancy__info">
+              <p class="text-base--400">Инженер-проектировщик электротехнических систем (Сетевой инженер)</p>
+              <div class="card-vacancy__skills">
+                <span class="text-description--400">Опыт работы с документацие</span>
+                <span class="text-description--400">Опыт работы на компьютере</span>
+                <span class="text-description--400">Полная занятость</span>
+              </div>
+            </div>
+            <button class="link-blue text-base--400">Подробнее о вакансии</button>
+          </a>
+          <a href="#" class="card-vacancy card-swipe">
+            <div class="card-vacancy__info">
+              <p class="text-base--400">Инженер-проектировщик электротехнических систем (Сетевой инженер)</p>
+              <div class="card-vacancy__skills">
+                <span class="text-description--400">Опыт работы с документацие</span>
+                <span class="text-description--400">Опыт работы на компьютере</span>
+                <span class="text-description--400">Полная занятость</span>
+                <span class="text-description--400">Полная занятость</span>
+                <span class="text-description--400">Полная занятость</span>
+              </div>
+            </div>
+            <button class="link-blue text-base--400">Подробнее о вакансии</button>
+          </a>
+          <a href="#" class="card-vacancy card-swipe">
+            <div class="card-vacancy__info">
+              <p class="text-base--400">Инженер-проектировщик электротехнических систем (Сетевой инженер)</p>
+              <div class="card-vacancy__skills">
+                <span class="text-description--400">Опыт работы с документацие</span>
+                <span class="text-description--400">Опыт работы на компьютере</span>
+                <span class="text-description--400">Полная занятость</span>
+              </div>
+            </div>
+            <button class="link-blue text-base--400">Подробнее о вакансии</button>
+          </a>
+          <a href="#" class="card-vacancy card-swipe">
+            <div class="card-vacancy__info">
+              <p class="text-base--400">Инженер-проектировщик электротехнических систем (Сетевой инженер)</p>
+              <div class="card-vacancy__skills">
+                <span class="text-description--400">Опыт работы с документацие</span>
+                <span class="text-description--400">Опыт работы на компьютере</span>
+                <span class="text-description--400">Полная занятость</span>
+              </div>
+            </div>
+            <button class="link-blue text-base--400">Подробнее о вакансии</button>
+          </a>
+          <a href="#" class="card-vacancy card-swipe">
+            <div class="card-vacancy__info">
+              <p class="text-base--400">Инженер-проектировщик электротехнических систем (Сетевой инженер)</p>
+              <div class="card-vacancy__skills">
+                <span class="text-description--400">Опыт работы с документацие</span>
+                <span class="text-description--400">Опыт работы на компьютере</span>
+                <span class="text-description--400">Полная занятость</span>
+                <span class="text-description--400">Полная занятость</span>
+                <span class="text-description--400">Полная занятость</span>
+              </div>
+            </div>
+            <button class="link-blue text-base--400">Подробнее о вакансии</button>
+          </a>
+          <a href="#" class="card-vacancy card-swipe">
+            <div class="card-vacancy__info">
+              <p class="text-base--400">Инженер-проектировщик электротехнических систем (Сетевой инженер)</p>
+              <div class="card-vacancy__skills">
+                <span class="text-description--400">Опыт работы с документацие</span>
+                <span class="text-description--400">Опыт работы на компьютере</span>
+                <span class="text-description--400">Полная занятость</span>
+              </div>
+            </div>
+            <button class="link-blue text-base--400">Подробнее о вакансии</button>
+          </a>
+        </div>
+      </section>
     </main>
 
     <!-- Подвал -->
