--- a/src/pages/home/ecology.html
+++ b/src/pages/home/ecology.html
@@ -552,7 +552,7 @@
           </div>
         </div>
         <div class="cards-news" data-swipe>
-          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">19 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -569,7 +569,7 @@
               </div>
             </div>
           </a>
-          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">16 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -586,7 +586,7 @@
               </div>
             </div>
           </a>
-          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">26 августа</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -603,7 +603,7 @@
               </div>
             </div>
           </a>
-          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">05 августа</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -620,7 +620,7 @@
               </div>
             </div>
           </a>
-          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">19 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -637,7 +637,7 @@
               </div>
             </div>
           </a>
-          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">16 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -654,7 +654,7 @@
               </div>
             </div>
           </a>
-          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">26 августа</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -671,7 +671,7 @@
               </div>
             </div>
           </a>
-          <a href="../../pages/home/news-details.html" class="wrapper-card-new">
+          <a href="../../pages/home/news-details.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">05 августа</span>
             <div class="card-news">
               <div class="card-news__image">
