Сделал страницу противодействие коррупции

--- a/src/pages/home/ecology.html
+++ b/src/pages/home/ecology.html
@@ -418,7 +418,7 @@
         </div>
         <div class="header__modal-menu__footer">
           <div class="header__modal-menu__footer__main-menu">
-            <a class="text-base--400" href="">Противодейсвие коррупции</a>
+            <a class="text-base--400" href="./anti-corruption-measures.html">Противодейсвие коррупции</a>
           </div>
           <div class="header__modal-menu__footer__detailed-menu">
             <a class="header__modal-menu__external text-base--400" href="https://www.energosale34.ru/" target="_blank">
@@ -1577,7 +1577,7 @@
                 <a class="text-description--600" href="./pages/home/privacy-policy.html">Политика конфиденциальности</a>
               </li>
               <li>
-                <a class="text-description--600" href="./pages/home/anti-corruption-measures.html">Противодейсвие коррупции</a>
+                <a class="text-description--600" href="./anti-corruption-measures.html">Противодейсвие коррупции</a>
               </li>
             </ul>
           </nav>
