--- a/src/index.html
+++ b/src/index.html
@@ -421,7 +421,7 @@
         </div>
         <div class="header__modal-menu__footer">
           <div class="header__modal-menu__footer__main-menu">
-            <a class="text-base--400" href="">Противодейсвие коррупции</a>
+            <a class="text-base--400" href="./pages/home/anti-corruption-measures.html">Противодейсвие коррупции</a>
           </div>
           <div class="header__modal-menu__footer__detailed-menu">
             <a class="header__modal-menu__external text-base--400" href="https://www.energosale34.ru/" target="_blank">
