Сделал страницу молодежного совета

--- a/src/pages/home/ecology.html
+++ b/src/pages/home/ecology.html
@@ -521,10 +521,10 @@
 
       <!-- Блок 4: Новости  -->
       <section class="ecology__news">
-        <div class="ecology__news-title">
+        <div class="cards-news__title">
           <h2 class="text-fiord">Новости</h2>
-          <div class="ecology__news-title__controls">
-            <button class="ecology__news-title__controls__arrow" data-swipe-prev>
+          <div class="cards-news__title__controls">
+            <button class="cards-news__title__controls__arrow" data-swipe-prev>
               <svg xmlns="http://www.w3.org/2000/svg" width="14" height="31" viewBox="0 0 14 31" fill="none">
                 <path
                   d="M3.68001 12.7567C2.27566 14.2463 2.27566 16.7535 3.68014 18.2433L14 29.19L12.2937 31L1.97383 20.0533C1.86995 19.9431 1.75796 19.8243 1.63963 19.6988C-0.546031 17.3803 -0.5468 13.6206 1.63886 11.3022L12.2938 0L14 1.80982L3.68001 12.7567Z"
@@ -532,7 +532,7 @@
                 />
               </svg>
             </button>
-            <button class="ecology__news-title__controls__arrow" data-swipe-next>
+            <button class="cards-news__title__controls__arrow" data-swipe-next>
               <svg xmlns="http://www.w3.org/2000/svg" width="14" height="31" viewBox="0 0 14 31" fill="none">
                 <path
                   d="M10.32 12.7567C11.7243 14.2463 11.7243 16.7535 10.3199 18.2433L1.71154e-06 29.19L1.70631 31L12.0262 20.0533C12.13 19.9431 12.242 19.8243 12.3604 19.6988C14.546 17.3803 14.5468 13.6206 12.3611 11.3022L1.70618 0L0 1.80982L10.32 12.7567Z"
@@ -540,7 +540,7 @@
                 />
               </svg>
             </button>
-            <div class="ecology__news-title__controls__all-news">
+            <div class="cards-news__title__controls__all-news">
               <a href="../../pages/home/news.html" class="text-description--300">Все новости</a>
               <svg xmlns="http://www.w3.org/2000/svg" width="21" height="15" viewBox="0 0 21 15" fill="none">
                 <path
