--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
     <link rel="stylesheet" href="styles/settings/common.css" />
-    <link rel="stylesheet" href="styles/components/swipe.css" />
     <link rel="stylesheet" href="styles/pages/index.css" />
     <script type="module" src="js/swipe.js"></script>
     <script type="module" src="js/video-control.js"></script>
@@ -664,7 +663,7 @@
           </div>
         </div>
         <div class="cards-news" data-swipe>
-          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
+          <a href="pages/home/news-detailed.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">19 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -681,7 +680,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
+          <a href="pages/home/news-detailed.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">16 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -698,7 +697,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
+          <a href="pages/home/news-detailed.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">26 августа</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -715,7 +714,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
+          <a href="pages/home/news-detailed.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">05 августа</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -732,7 +731,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
+          <a href="pages/home/news-detailed.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">26 августа</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -749,7 +748,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-new card-swipe">
+          <a href="pages/home/news-detailed.html" class="wrapper-card-new card-swipe">
             <span class="card-news__date text-description--300">16 сентября</span>
             <div class="card-news">
               <div class="card-news__image">
@@ -766,7 +765,7 @@
               </div>
             </div>
           </a>
-          <a href="pages/home/news-details.html" class="wrapper-card-newcard-swipe">
+          <a href="pages/home/news-detailed.html" class="wrapper-card-newcard-swipe">
             <span class="card-news__date text-description--300">05 августа</span>
             <div class="card-news">
               <div class="card-news__image">
