Обновил документацию и добавил обработку путей для отображения ошибки 404

--- a/src/pages/heating-networks/index.html
+++ b/src/pages/heating-networks/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../styles/pages/heating-networks/index.css" />
     <link rel="stylesheet" href="../../styles/settings/common.css" />
+    <script type="module" src="../../js/404-handler.js"></script>
     <title>Теплосети</title>
   </head>
   <body></body>
