--- a/src/pages/home/anti-corruption-measures.html
+++ b/src/pages/home/anti-corruption-measures.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../styles/pages/home/anti-corruption-measures.css" />
     <link rel="stylesheet" href="../../styles/settings/common.css" />
     <script type="module" src="../../js/header.js"></script>
+    <script type="module" src="./js/404-handler.js"></script>
   </head>
   <body>
     <!-- Шапка сайта -->
