--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <script type="module" src="js/gallery.js"></script>
     <script type="module" src="js/footer-slider-logos.js"></script>
     <script type="module" src="./js/header.js"></script>
+    <script type="module" src="./js/404-handler.js"></script>
   </head>
   <body>
     <!-- Шапка сайта -->
