--- a/src/pages/factory-networks/consumers.html
+++ b/src/pages/factory-networks/consumers.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../styles/pages/ese-kuban/consumers.css" />
     <link rel="stylesheet" href="../../styles/settings/common.css" />
     <title>Потребителям</title>
-  </head>
+  
+    <script type="module" src="./js/404-handler.js"></script></head>
   <body></body>
 </html>
