--- a/src/pages/heating-networks/purchases.html
+++ b/src/pages/heating-networks/purchases.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../styles/pages/heat-generation/purchases.css" />
     <link rel="stylesheet" href="../../styles/settings/common.css" />
     <title>Закупки</title>
-  </head>
+  
+    <script type="module" src="./js/404-handler.js"></script></head>
   <body></body>
 </html>
