--- a/src/pages/home/news.html
+++ b/src/pages/home/news.html
@@ -9,6 +9,7 @@
     <script type="module" src="../../js/header.js"></script>
     <script type="module" src="../../js/pagination.js"></script>
     <script type="module" src="../../js/news-menu.js"></script>
+    <script type="module" src="../../js/404-handler.js"></script>
   </head>
   <body>
     <!-- Шапка сайта -->
