--- a/src/pages/op-yaroslavl/index.html
+++ b/src/pages/op-yaroslavl/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../styles/pages/op-yaroslavl/index.css" />
     <link rel="stylesheet" href="../../styles/settings/common.css" />
     <title>Теплосети</title>
-  </head>
+  
+    <script type="module" src="./js/404-handler.js"></script></head>
   <body></body>
 </html>
