Настроил сборку, поправил пути и сделал перенаправление на страницу ошибки для iis

--- a/src/pages/ese-kuban/index.html
+++ b/src/pages/ese-kuban/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../styles/pages/ese-kuban/index.css" />
     <link rel="stylesheet" href="../../styles/settings/common.css" />
     <title>Теплосети</title>
-  
-    <script type="module" src="./js/404-handler.js"></script></head>
+
+    <script type="module" src="../../js/404-handler.js"></script></head>
   <body></body>
 </html>
