--- a/src/pages/home/ecology.html
+++ b/src/pages/home/ecology.html
@@ -10,7 +10,7 @@
     <script type="module" src="../../js/header.js"></script>
     <script type="module" src="../../js/video-control.js"></script>
     <script type="module" src="../../js/swipe.js"></script>
-    <script type="module" src="./js/404-handler.js"></script>
+    <script type="module" src="../../js/404-handler.js"></script>
   </head>
   <body>
     <!-- Шапка сайта -->
