--- a/src/pages/heating-networks/contacts.html
+++ b/src/pages/heating-networks/contacts.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../styles/pages/ese-kuban/contacts.css" />
     <link rel="stylesheet" href="../../styles/settings/common.css" />
     <title>Контактная информация</title>
-  
-    <script type="module" src="./js/404-handler.js"></script></head>
+
+    <script type="module" src="../../js/404-handler.js"></script></head>
   <body></body>
 </html>
