--- a/src/pages/home/company-structure.html
+++ b/src/pages/home/company-structure.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../styles/settings/common.css" />
     <script type="module" src="../../js/header.js"></script>
     <script type="module" src="../../js/company-structure.js"></script>
-    <script type="module" src="./js/404-handler.js"></script>
+    <script type="module" src="../../js/404-handler.js"></script>
   </head>
   <body>
     <!-- Шапка сайта -->
