--- a/src/pages/home/privacy-policy.html
+++ b/src/pages/home/privacy-policy.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../styles/pages/heat-generation/privacy-policy.css" />
     <link rel="stylesheet" href="../../styles/settings/common.css" />
     <title>Политика конфиденциальности</title>
-  
-    <script type="module" src="./js/404-handler.js"></script></head>
+
+    <script type="module" src="../../js/404-handler.js"></script></head>
   <body></body>
 </html>
